--- a/app/views/years/_form.html.erb
+++ b/app/views/years/_form.html.erb
@@ -24,6 +24,37 @@
 		</div>
 	</div>
 	<hr>
+	<div class="row">
+		<div class="col-sm-12">
+			<h4>Goals</h4>
+		</div>
+		<div class="col-sm-4">
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="form-group">
+						<%= f.label :goal_year, 'Year' %>
+						<div class="input-group">
+							<span class="input-group-addon"><i class="fas fa-dollar-sign"></i></span>
+							<%= f.number_field :goal_year, value: @year.goal_year.to_i, class: 'form-control' %>
+						</div>
+					</div>
+					<hr>
+				</div>
+				<% 12.times do |month| %>
+				<div class="col-sm-6">
+					<div class="form-group">
+						<label><%= Date::MONTHNAMES[month + 1] %></label>
+						<div class="input-group">
+							<span class="input-group-addon"><i class="fas fa-dollar-sign"></i></span>
+							<%= number_field_tag('goals_months[]', @year.goals_months[month].to_i, { :class => 'form-control', :min => 0, :step => 1 }) %>
+						</div>
+					</div>
+				</div>
+				<% end %>
+			</div>
+		</div>
+	</div>
+	<hr>
 	<div class="form-group">
 		<button type="submit" class="btn btn-success"><%= icon('far', 'save', class: 'left') %>Save</button>
 	</div>
