--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -217,7 +217,7 @@
 						<p><strong>Year</strong></p>
 					</div>
 					<div class="col-sm-8">
-						<p><%= number_to_currency(@year.goal_year, { :precision => 0 }) %></p>
+						<p><span class="currency"><%= number_to_currency(@year.goal_year, { :precision => 0 }) %></span></p>
 					</div>
 				</div>
 				<% @year.goals_months.each_with_index do |month, index| %>
@@ -226,7 +226,7 @@
 						<p><strong><%= Date::MONTHNAMES[index + 1] %></strong></p>
 					</div>
 					<div class="col-sm-8">
-						<p><%= number_to_currency(month.to_i, { :precision => 0 }) %></p>
+						<p><span class="currency"><%= number_to_currency(month.to_i, { :precision => 0 }) %></span></p>
 					</div>
 				</div>
 				<% end %>
