--- a/app/views/layouts/_financialdash.html.erb
+++ b/app/views/layouts/_financialdash.html.erb
@@ -15,14 +15,14 @@
 			</thead>
 			<tbody>
 				<tr>
-					<td><%= today.year %></td>
+					<td><%= link_to Date.today.year, year_path(Year.where(year: Date.today.year).first.year) %></td>
 					<td class="text-right"><span class="pull-right currency green"><%= number_to_currency(Invoice.paidByYear(today.year).sum('cost'), { :negative_format => '(%n)' }) %></span></td>
-					<td class="text-right"><%= number_to_currency(Year.where(year: today.year).first.goal_year.to_i) %></td>
+					<td class="text-right"><span class="pull-right currency"><%= number_to_currency(Year.where(year: today.year).first.goal_year.to_i) %></span></td>
 				</tr>
 				<tr>
 					<td><%= today.strftime('%B') %></td>
-					<td class="text-right"><span class="pull-right currency green"><span class="pull-right currency green"><%= number_to_currency(Invoice.paidByMonth(today.year, today.month).sum('cost'), { :negative_format => '(%n)' }) %></span></span></td>
-					<td class="text-right"><%= number_to_currency(Year.where(year: today.year).first.goals_months[today.month - 1].to_i) %></td>
+					<td class="text-right"><span class="pull-right currency green"><%= number_to_currency(Invoice.paidByMonth(today.year, today.month).sum('cost'), { :negative_format => '(%n)' }) %></span></td>
+					<td class="text-right"><span class="pull-right currency"><%= number_to_currency(Year.where(year: today.year).first.goals_months[today.month - 1].to_i) %></span></td>
 				</tr>
 			</tbody>
 		</table>
