--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -35,7 +35,7 @@
 						</div>
 					</div>
 					<div class="col-sm-12"><hr></div>
-					<div class="col-md-4 col-sm-6">
+					<div class="col-md-4 col-md-offset-2 col-sm-6">
 						<div class="row">
               <div class="col-xs-10">
 								<%= link_to vendors_path, { :class => 'btn btn-block btn-lg btn-danger-alt' } do %><%= icon('fas', 'users', class: 'left') %>Vendors<% end %>
