--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -33,7 +33,13 @@
 						</div>
 					</div>
 					<div class="col-md-6">
-						<div class="chart-wrap"><%= column_chart chart_year_by_invoice_month_path(@year.id) %></div>
+						<div class="chart-wrap"><%= column_chart chart_year_by_invoice_month_with_goals_path(@year.id), library: {
+							plotOptions: {
+								column: {
+									grouping: false
+								}
+							}
+						} %></div>
 					</div>
 				</div>
 				<div class="row">
