--- a/app/views/layouts/_financialdash.html.erb
+++ b/app/views/layouts/_financialdash.html.erb
@@ -30,12 +30,6 @@
 </div>
 <div class="row">
 	<div class="nopad-side col-sm-8 col-sm-offset-2">
-		<div class="chart-wrap"><%= column_chart chart_trailing_x_months_path(5), library: {
-			plotOptions: {
-				column: {
-					grouping: false
-				}
-			}
-		} %></div>
+		<div class="chart-wrap"><%= column_chart chart_trailing_x_months_path(5) %></div>
 	</div>
 </div>
