--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -33,13 +33,7 @@
 						</div>
 					</div>
 					<div class="col-md-6">
-						<div class="chart-wrap"><%= column_chart chart_year_by_invoice_month_with_goals_path(@year.id), library: {
-							plotOptions: {
-								column: {
-									grouping: false
-								}
-							}
-						} %></div>
+						<div class="chart-wrap"><%= column_chart chart_year_by_invoice_month_with_goals_path(@year.id) %></div>
 					</div>
 				</div>
 				<div class="row">
@@ -132,15 +126,11 @@
 				<div class="row">
 					<div class="col-md-6">
 						<h3>By Category (to-date)</h3>
-						<div class="chart-wrap"><%= pie_chart chart_year_by_expense_category_path(@year.id), id: 'expenses-category-pie', legend: true, donut: true, library: {
-							tooltip: {
-					      pointFormat: 'Expenses: <b>{point.y}</b>'
-					    }
-						} %></div>
+						<div class="chart-wrap"><%= pie_chart chart_year_by_expense_category_path(@year.id), id: 'expenses-category-pie', legend: true, donut: true %></div>
 					</div>
 					<div class="col-md-6">
 						<h3>By Month (to-date)</h3>
-						<div class="chart-wrap"><%= column_chart chart_year_by_expense_month_path(@year.id) %></div>
+						<div class="chart-wrap"><%= column_chart chart_year_by_expense_month_path(@year.id), colors: ['#d9534f'] %></div>
 					</div>
 				</div>
 				<h3>By Vendor (to-date)</h3>
