--- a/app/views/years/_form.html.erb
+++ b/app/views/years/_form.html.erb
@@ -28,7 +28,7 @@
 		<div class="col-sm-12">
 			<h4>Goals</h4>
 		</div>
-		<div class="col-sm-4">
+		<div class="col-sm-12">
 			<div class="row">
 				<div class="col-sm-12">
 					<div class="form-group">
@@ -38,10 +38,9 @@
 							<%= f.number_field :goal_year, value: @year.goal_year.to_i, class: 'form-control' %>
 						</div>
 					</div>
-					<hr>
 				</div>
 				<% 12.times do |month| %>
-				<div class="col-sm-6">
+				<div class="col-md-2 col-sm-4 col-xs-6">
 					<div class="form-group">
 						<label><%= Date::MONTHNAMES[month + 1] %></label>
 						<div class="input-group">
