--- a/app/views/years/_tab-goals.html.erb
+++ b/app/views/years/_tab-goals.html.erb
@@ -1,18 +1,28 @@
-<div class="row">
-	<div class="col-sm-4">
-		<p><strong>Year</strong></p>
-	</div>
-	<div class="col-sm-8">
-		<p><span class="currency"><%= number_to_currency(@year.goal_year, { :precision => 0 }) %></span></p>
-	</div>
-</div>
-<% @year.goals_months.each_with_index do |month, index| %>
-<div class="row">
-	<div class="col-sm-4">
-		<p><strong><%= Date::MONTHNAMES[index + 1] %></strong></p>
-	</div>
-	<div class="col-sm-8">
-		<p><span class="currency"><%= number_to_currency(month.to_i, { :precision => 0 }) %></span></p>
-	</div>
-</div>
-<% end %>
+<table class="table table-striped">
+	<thead>
+		<tr>
+			<th>&nbsp;</th>
+			<th>Goal</th>
+			<th>Actual</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td><strong>Year</strong></td>
+			<td><span class="currency"><%= number_to_currency(@year.goal_year, { :precision => 0 }) %></span></td>
+			<td><span class="currency"><%= number_to_currency(@year.incomeTotal, { :negative_format => '(%n)' }) %></span></td>
+		</tr>
+		<% @year.goals_months.each_with_index do |month, index| %>
+		<tr>
+			<td><strong><%= Date::MONTHNAMES[index + 1] %></strong></td>
+			<td><span class="currency"><%= number_to_currency(month.to_i, { :precision => 0 }) %></span></td>
+			<td><span class="currency"><%
+				monthSum = Invoice.paidByMonth(@year.year, month).sum('cost').to_i
+				if monthSum == 0
+			%>&mdash;<% else %>
+			<%= number_to_currency(Invoice.paidByMonth(@year.year, month).sum('cost').to_i, { :negative_format => '(%n)' }) %>
+			<% end %></span></td>
+		</tr>
+		<% end %>
+	</tbody>
+</table>
