Fixed month sum

--- a/app/views/years/_tab-goals.html.erb
+++ b/app/views/years/_tab-goals.html.erb
@@ -16,7 +16,12 @@
 		<tr>
 			<td><strong><%= Date::MONTHNAMES[index + 1] %></strong></td>
 			<td><span class="currency"><%= number_to_currency(month.to_i, { :precision => 0 }) %></span></td>
-			<td><span class="currency"><%= number_to_currency(Invoice.paidByMonth(@year.year, month).sum('cost').to_i, { :negative_format => '(%n)' }) %></span></td>
+			<td><span class="currency"><%
+				monthSum = Invoice.paidByMonth(@year.year, index + 1).sum('cost')
+				if monthSum == 0
+			%>&mdash;<% else %>
+			<%= number_to_currency(monthSum, { :negative_format => '(%n)' }) %>
+			<% end %></span></td>
 		</tr>
 		<% end %>
 	</tbody>
