--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<div class="row">
-					<div class="col-md-4 col-sm-6">
+					<div class="col-md-3 col-sm-6">
             <div class="row">
               <div class="col-xs-10">
                 <%= link_to clients_path, { :class => 'btn btn-block btn-lg btn-warning' } do %><%= icon('fas', 'address-book', class: 'left') %>Clients<% end %>
@@ -14,17 +14,7 @@
               </div>
             </div>
 					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="row">
-              <div class="col-xs-10">
-								<%= link_to projects_path, { :class => 'btn btn-block btn-lg btn-info' } do %><%= icon('far', 'folder-open', class: 'left') %>Projects<% end %>
-							</div>
-							<div class="col-xs-2 button-wrap-nopad">
-                <%= link_to new_project_path, { :class => 'btn btn-block btn-lg btn-info' } do %><%= icon('fas', 'plus') %><% end %>
-              </div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="row">
               <div class="col-xs-10">
 								<%= link_to invoices_path, { :class => 'btn btn-block btn-lg btn-success' } do %><%= icon('fas', 'dollar-sign', class: 'left') %>Invoices<% end %>
@@ -34,18 +24,17 @@
               </div>
 						</div>
 					</div>
-					<div class="col-sm-12"><hr></div>
-					<div class="col-md-4 col-md-offset-2 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="row">
               <div class="col-xs-10">
-								<%= link_to vendors_path, { :class => 'btn btn-block btn-lg btn-danger-alt' } do %><%= icon('fas', 'users', class: 'left') %>Vendors<% end %>
+								<%= link_to vendors_path, { :class => 'btn btn-block btn-lg btn-info' } do %><%= icon('fas', 'users', class: 'left') %>Vendors<% end %>
 							</div>
 							<div class="col-xs-2 button-wrap-nopad">
-                <%= link_to new_vendor_path, { :class => 'btn btn-block btn-lg btn-danger-alt' } do %><%= icon('fas', 'plus') %><% end %>
+                <%= link_to new_vendor_path, { :class => 'btn btn-block btn-lg btn-info' } do %><%= icon('fas', 'plus') %><% end %>
               </div>
 						</div>
 					</div>
-					<div class="col-md-4 col-sm-6">
+					<div class="col-md-3 col-sm-6">
 						<div class="row">
               <div class="col-xs-10">
 								<%= link_to expenses_path, { :class => 'btn btn-block btn-lg btn-danger' } do %><%= icon('far', 'credit-card', class: 'left') %>Expenses<% end %>
