--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<div class="row">
-					<div class="col-md-3 col-sm-6">
+					<div class="col-md-offset-2 col-md-4 col-sm-6">
             <div class="row">
               <div class="col-xs-10">
                 <%= link_to clients_path, { :class => 'btn btn-block btn-lg btn-warning' } do %><%= icon('fas', 'address-book', class: 'left') %>Clients<% end %>
@@ -14,7 +14,7 @@
               </div>
             </div>
 					</div>
-					<div class="col-md-3 col-sm-6">
+					<div class="col-md-4 col-sm-6">
 						<div class="row">
               <div class="col-xs-10">
 								<%= link_to invoices_path, { :class => 'btn btn-block btn-lg btn-success' } do %><%= icon('fas', 'dollar-sign', class: 'left') %>Invoices<% end %>
@@ -24,7 +24,8 @@
               </div>
 						</div>
 					</div>
-					<div class="col-md-3 col-sm-6">
+					<div class="col-md-12"><hr></div>
+					<div class="col-md-offset-2 col-md-4 col-sm-6">
 						<div class="row">
               <div class="col-xs-10">
 								<%= link_to vendors_path, { :class => 'btn btn-block btn-lg btn-info' } do %><%= icon('fas', 'users', class: 'left') %>Vendors<% end %>
@@ -34,7 +35,7 @@
               </div>
 						</div>
 					</div>
-					<div class="col-md-3 col-sm-6">
+					<div class="col-md-4 col-sm-6">
 						<div class="row">
               <div class="col-xs-10">
 								<%= link_to expenses_path, { :class => 'btn btn-block btn-lg btn-danger' } do %><%= icon('far', 'credit-card', class: 'left') %>Expenses<% end %>
