--- a/app/views/invoice_mailer/invoice_email.html.erb
+++ b/app/views/invoice_mailer/invoice_email.html.erb
@@ -25,7 +25,9 @@
             <h3>Invoice ID: <%= invoice.display_id %></h3>
             <h3>Amount: <%= number_to_currency(invoice.lines.sum('total'), { :unit => '$', :negative_format => '(%n)' }) %></h3>
             <h3>Status: <% if invoice.paid == true %><span style="color: green;">PAID</span><% else %><span style="color: red;">NOT PAID</span><% end %></h3>
-            <% if invoice.paid == true %><h3>Payment Method: <%= invoice.paymenttype %></h3><% end %>
+						<% if invoice.paid == true %><h3>Payment Method: <%= invoice.paymenttype %></h3><% end %>
+						<p><strong>PLEASE NOTE: Our mailing address has recently changed.</strong></p>
+						<p><strong><%= company[:pay_to] %><br><%= company[:address][:street] %><br><%= company[:address][:city] %>, <%= company[:address][:state_abbrv] %> <%= company[:address][:zipcode] %></strong></p>
             <p><%= invoice.description %> Attached is an invoice PDF with cost breakdowns and payment information for your records. This payment can be made out to '<%= company[:pay_to] %>'.</p>
             <table>
               <tr>
