--- a/app/views/invoices/_payment-options.html.erb
+++ b/app/views/invoices/_payment-options.html.erb
@@ -25,7 +25,8 @@
     <div class="col-sm-12 payment-option payment-option-check">
       <h3>Pay via paper check:</h3>
       <p>Please make the check out to '<strong><%= company[:pay_to] %></strong>' and mail to:</p>
-      <p><%= company[:pay_to] %><br><%= company[:address][:street] %><br><%= company[:address][:city] %>, <%= company[:address][:state_abbrv] %> <%= company[:address][:zipcode] %></p>
+			<p><%= company[:pay_to] %><br><%= company[:address][:street] %><br><%= company[:address][:city] %>, <%= company[:address][:state_abbrv] %> <%= company[:address][:zipcode] %></p>
+			<p><strong>PLEASE NOTE: Our mailing address has recently changed.</strong></p>
     </div>
   </div>
   <hr>
