--- a/app/views/invoices/_payment-options.html.erb
+++ b/app/views/invoices/_payment-options.html.erb
@@ -5,7 +5,7 @@
       <% if controller_name == 'invoices' %>
         <%= form_tag "#{stripe_invoice_path(@invoice)}?access_token=#{@invoice.access_token}" do %>
 					<p>Stripe <a href="https://stripe.com/us/pricing" target="_blank">adds a fee</a> of <strong><%= number_to_currency(@invoice.stripeChargeDifference) %></strong> for this transaction, which increases your payment total to <strong><%= number_to_currency(@invoice.stripeChargeCost) %></strong>.</p>
-					<button id="checkout-button" class="stripe-button" data-secret="<%= @session['id'] %>">Checkout</button>
+					<button id="checkout-button" class="btn btn-success" data-secret="<%= @session['id'] %>">Pay with Card</button>
 					<script src="https://js.stripe.com/v3/"></script>
 					<script>
 						var stripe = Stripe('<%= Figaro.env.stripe_api_publishable_key %>');
@@ -58,7 +58,7 @@
   <h3>Pay with cryptocurrency:</h3>
   <p>Cryptocurrency payments are facilitated through <a href="https://commerce.coinbase.com/" target="_blank">Coinbase Commerce</a>.</p>
   <% if controller_name == 'invoices' %>
-  <button id="generate-crypto-link" data-invoice-id="<%= @invoice.id %>" data-access-token="<%= @invoice.access_token %>" class="stripe-button-el"><span>Pay with Cryptocurrency</span></button>
+  <button id="generate-crypto-link" data-invoice-id="<%= @invoice.id %>" data-access-token="<%= @invoice.access_token %>" class="btn btn-success stripe-button-el"><span>Pay with Cryptocurrency</span></button>
   <a id="crypto-link" href="#"></a>
   <% end %>
 </div>
