--- a/app/views/welcome/stripe.html.erb
+++ b/app/views/welcome/stripe.html.erb
@@ -12,7 +12,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<% @payouts['data'].each do |payout| %>
+						<% @payouts.each do |payout| %>
 						<tr>
 							<td><%= Time.at(payout.arrival_date).strftime('%B %e, %Y') %></td>
 							<td class="text-right" colspan="3"><%= number_to_currency(payout.amount.to_f / 100, precision: 2) %></td>
@@ -31,7 +31,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<% @charges['data'].each do |charge| %>
+						<% @charges.each do |charge| %>
 						<tr>
 							<td><%= Time.at(charge.created).strftime('%B %e, %Y') %></td>
 							<td><% if charge.metadata['invoice_id'] %><%= link_to invoice_path(charge.metadata['invoice_id']) do %><%= charge.metadata['invoice_id'] %><% end %><% else %>&mdash;<% end %></td>
