--- a/app/views/invoices/_payment-options.html.erb
+++ b/app/views/invoices/_payment-options.html.erb
@@ -1,9 +1,10 @@
 <div class="payment-options">
 	<div class="row">
+		<% if @session.present? %>
     <div class="col-sm-12 payment-option payment-option-stripe">
       <h3>Pay with a credit or debit card:<br><small>via the Stripe payment service</small></h3>
-      <% if controller_name == 'invoices' %>
-        <%= form_tag "#{stripe_invoice_path(@invoice)}?access_token=#{@invoice.access_token}" do %>
+			<% if controller_name == 'invoices' %>
+				<%= form_tag "#{stripe_invoice_path(@invoice)}?access_token=#{@invoice.access_token}" do %>
 					<p>Stripe <a href="https://stripe.com/us/pricing" target="_blank">adds a fee</a> of <strong><%= number_to_currency(@invoice.stripeChargeDifference) %></strong> for this transaction, which increases your payment total to <strong><%= number_to_currency(@invoice.stripeChargeCost) %></strong>.</p>
 					<button id="checkout-button" class="btn btn-success" data-secret="<%= @session['id'] %>">Pay with Card</button>
 					<script src="https://js.stripe.com/v3/"></script>
@@ -17,11 +18,12 @@
 							});
 						});
 					</script>
-        <% end %>
+				<% end %>
       <% elsif controller_name == 'welcome' and action_name == 'payment' %>
       <p>Stripe <a href="https://stripe.com/us/pricing" target="_blank">adds a fee</a> of <strong>approximately 3%</strong> to each transaction.</p>
       <% end %>
-    </div>
+		</div>
+		<% end %>
   </div>
   <hr>
   <div class="row">
