--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,16 +1,14 @@
-<% if user_signed_in? %>
-<% provide(:title, "Invoice ##{@invoice.id} | ") %>
-<% else %>
 <% provide(:title, "Invoice #{@invoice.display_id} | ") %>
-<% end %>
 <section id="invoice-show">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-<% if user_signed_in? %>12<% else %>8 col-sm-offset-2<% end %>">
+			<div class="<% if @clientView %>col-md-8 col-md-offset-2<% else %>col-sm-12<% end %>">
+
 				<% if @invoice.client.logo.present? %>
 				<%= image_tag(@invoice.client.logo.url(), class: 'client-logo pull-right hidden-xs') %>
 				<% end %>
-				<% if user_signed_in? %>
+
+				<% if user_signed_in? and !@clientView %>
 				<h1>Invoice #<%= @invoice.id %></h1>
 				<p class="doicons">
 					<%= link_to invoice_path(:format => 'pdf'), title: 'PDF' do %><%= icon('fas', 'file', class: 'fa-fw fa-2x text-success') %><% end %>
@@ -19,6 +17,11 @@
 					<%= link_to email_invoice_path(@invoice), title: 'Send' do %><%= icon('far', 'envelope-open', class: 'fa-fw fa-2x text-success') %><% end %>
 					<% if !@invoice.paid? %><%= link_to mark_paid_invoice_path(@invoice), id: 'paid-today-btn', title: 'Paid Today?', class: 'btn btn-sm btn-warning', remote: true do %>Paid Today?<% end %><% end %>
 				</p>
+				<% if @invoice.access_token.present? %>
+				<p>
+					<strong>Access Token:</strong> <%= @invoice.access_token %> (<a href="<%= invoice_path(@invoice) %>?access_token=<%= @invoice.access_token %>">Client Link</a>)
+				</p>
+				<% end %>
 				<% end %>
 				<% if @invoice.paid == true and !user_signed_in? %>
 				<p><%= link_to invoice_path(:format => 'pdf', :access_token => @invoice.access_token), { :target => '_blank' } do %>Download Invoice marked 'PAID'<% end %></p>
@@ -27,38 +30,21 @@
 					<strong>Client:</strong>
 					<% if user_signed_in? %><%= link_to @invoice.client do %><%= @invoice.client.name %><% end %><% else %><%= @invoice.client.name %><% end %>
 				</p>
-				<% if user_signed_in? %>
-				<% if @invoice.access_token.present? %>
-				<p>
-					<strong>Access Token:</strong> <%= @invoice.access_token %> (<a href="<%= invoice_path(@invoice) %>?access_token=<%= @invoice.access_token %>">Client Link</a>)
-				</p>
-				<% end %>
-				<% end %>
 				<p>
 					<strong>Invoice ID<% if user_signed_in? %> Display<% end %>:</strong>
 					<%= @invoice.display_id %>
-				</p>
-				<p>
-					<strong>Date:</strong>
-					<%= @invoice.date.to_formatted_s(:long) %>
 				</p>
 				<p>
 					<strong>Work Type:</strong>
 					<%= @invoice.worktype %>
 				</p>
 				<p>
-					<strong>Cost:</strong>
-					<span class="currency"><%= number_to_currency(@invoice.cost, { :negative_format => '(%n)' }) %></span>
+					<strong>Date Issued:</strong>
+					<%= @invoice.date.to_formatted_s(:long) %>
 				</p>
-				<% if @invoice.paid == false %>
 				<p>
-					<strong>Paid?:</strong>
-					<% if @invoice.paid == true %><%= icon('fas', 'check', class: 'green') %><% else %><span class="spread red">Not Paid</span><% end %>
-				</p>
-				<% else %>
-				<p>
-					<span class="spread green">Paid</span> on
-					<%= @invoice.paiddate.to_formatted_s(:long) %>
+					<% if @invoice.paid == true %><%= icon('fas', 'check', class: 'green') %> <span class="spread green">Paid</span> on
+					<%= @invoice.paiddate.to_formatted_s(:long) %><% else %><%= icon('fas', 'exclamation', class: 'red') %> <span class="spread red">Not Paid</span><% end %>
 				</p>
 				<% if !@invoice.paymenttype.blank? %>
 				<p>
@@ -66,40 +52,10 @@
 					<%= @invoice.paymenttype %>
 				</p>
 				<% end %>
-				<% end %>
 				<p><strong>Description:</strong></p>
 				<p><%= @invoice.description %></p>
-				<% if !@invoice.lines.blank? %>
-				<table class="table table-hover table-condensed">
-					<thead>
-						<tr>
-		          <% if user_signed_in? %>
-							<th>&nbsp;</th>
-		          <% end %>
-							<th>Description</th>
-							<th class="text-center">Hours</th>
-							<th class="text-center">Rate ($) per Hour</th>
-							<th class="text-center">Cost</th>
-						</tr>
-					</thead>
-					<tbody>
-						<%= render @invoice.lines %>
-					</tbody>
-					<tfoot>
-						<tr>
-		          <% if user_signed_in? %>
-							<td>&nbsp;</td>
-		          <% end %>
-							<td class="text-right" colspan="3"><strong>Total</strong>&nbsp;&nbsp;</td>
-							<td class="currency"><strong><div class="pull-right"><%= number_to_currency(@invoice.lines.sum('total'), { :unit => '', :negative_format => '(%n)' }) %></div>$</strong></td>
-						</tr>
-					</tfoot>
-				</table>
-				<% end %>
-		    <% if !user_signed_in? and !@invoice.paid and @invoice.access_token.present? %>
-				<%= render 'payment-options' %>
-		    <% end %>
-				<% if user_signed_in? %>
+				<%= render 'line-items-table' %>
+				<% if user_signed_in? and !@invoice.paid and !@clientView %>
 				<h2>Add a line:</h2>
 				<%= render 'lines/form' %>
 				<div class="row hidden-print">
@@ -107,6 +63,8 @@
 						<p><%= link_to 'Back', invoices_path %></p>
 					</div>
 				</div>
+				<% else %>
+					<%= render 'payment-options' %>
 				<% end %>
 			</div>
 		</div>
