--- a/app/views/layouts/pdf/invoice.html.erb
+++ b/app/views/layouts/pdf/invoice.html.erb
@@ -23,7 +23,12 @@
 
     .sdc-logo {
       float: left;
-    }
+		}
+
+		.sdc-logo-text {
+			width: 381px;
+			font-size: 20px;
+		}
 
     .sdc-logo img {
 	  	max-width: 381px;
@@ -61,7 +66,6 @@
 			<div class="col-sm-12 text-center">
 				<hr>
 				<p>&copy; <%= company[:full_name] %></p>
-				<%= wicked_pdf_image_tag '/images/sdc_acronym.svg' %>
 			</div>
 		</div>
 	</div>
