--- a/app/views/layouts/mail.html.erb
+++ b/app/views/layouts/mail.html.erb
@@ -11,7 +11,7 @@
 	margin:0;
 	padding:0;
 }
-* { font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+* { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif; }
 
 img {
 	max-width: 100%;
@@ -185,21 +185,7 @@ ul li {
 </head>
 <body bgcolor="#ffffff">
   <!-- HEADER -->
-  <table bgcolor="#000000" class="head-wrap">
-    <tr>
-      <td></td>
-      <td class="header container">
-        <div class="content">
-          <table bgcolor="#000000">
-            <tr>
-              <td align="center"><img src="<%= root_url[0...-1] %><%= company[:logo][:alt_png] %>" alt="<%= company[:full_name] %>"></td>
-            </tr>
-          </table>
-        </div>
-      </td>
-      <td></td>
-    </tr>
-  </table><!-- /HEADER -->
+  <h1><%= company[:abbrv_name] %></h1>
 	<!-- BODY -->
 	<table class="body-wrap">
 		<%= yield %>
