--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -128,7 +128,7 @@
 							<tfoot>
 								<tr>
 									<td colspan="2">&nbsp;</td>
-									<td class="text-center"><strong>Total</strong></td>
+									<td class="text-right"><strong>Total</strong></td>
 									<td class="currency text-right"><strong><%= number_to_currency(@client.invoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
 									<td>&nbsp;</td>
 								</tr>
