--- a/app/views/years/_tab-income.html.erb
+++ b/app/views/years/_tab-income.html.erb
@@ -6,7 +6,7 @@
 		</div>
 	</div>
 	<div class="col-md-6">
-		<div class="chart-wrap"><%= column_chart chart_year_by_invoice_month_with_goals_path(@year.id) %></div>
+		<div class="chart-wrap"><%= column_chart chart_year_by_invoice_month_with_goals_path(@year.id), id: 'year-income-chart' %></div>
 	</div>
 </div>
 <div class="row">
