--- a/app/views/years/_tab-expenses.html.erb
+++ b/app/views/years/_tab-expenses.html.erb
@@ -9,7 +9,7 @@
 	</div>
 	<div class="col-md-6">
 		<h3>By Month (to-date)</h3>
-		<div class="chart-wrap"><%= column_chart chart_year_by_expense_month_path(@year.id), id: 'year-expenses-chart', colors: ['#d9534f'] %></div>
+		<div class="chart-wrap"><%= column_chart chart_year_by_expense_month_path(@year.id), id: 'year-expenses-chart', colors: [Chartkick.options[:colors][1]], days_elapsed: @year.days_elapsed %></div>
 	</div>
 </div>
 <h3>By Vendor (to-date)</h3>
