--- a/app/assets/stylesheets/partials/_global.scss
+++ b/app/assets/stylesheets/partials/_global.scss
@@ -273,6 +273,11 @@ footer {
 
 }
 
+.chart-wrap .highcharts-plot-line-label {
+	font-size: 6px;
+	text-transform: uppercase;
+}
+
 .chart-wrap .highcharts-column-series.highcharts-series-2,
 .chart-wrap #year-income-chart .highcharts-column-series.highcharts-series-1 {
 
