--- a/app/views/years/_tab-overview.html.erb
+++ b/app/views/years/_tab-overview.html.erb
@@ -7,5 +7,5 @@
 	<p><small>*Tax rate and estimates are conservative and independent of expenses and discounts.</small></p>
 </div>
 <div class="col-md-7 col-md-offset-1">
-	<div class="chart-wrap overview-chart-wrap"><%= column_chart chart_year_all_data_path(@year.id), id: 'year-all-chart', days_elapsed: @year.days_elapsed %></div>
+	<div class="chart-wrap overview-chart-wrap"><%= column_chart chart_year_all_data_path(@year.id), id: 'year-all-chart', days_in_year: @year.days_in_year, days_elapsed: @year.days_elapsed %></div>
 </div>
